# omnicopter_sim

./: CMakeLists.txt  README.md  package.xml
launch/: sim.launch
msg/: Arm.msg  AttSp.msg  PosSp.msg  RCInput.msg  State.msg
src/: attitude_controller.cpp  commander.cpp  control_allocation.cpp  omnicopter.cpp  position_controller.cpp  rc_mapping.cpp  visualization.cpp
